# oasst_editor

./: .gitignore  README.md  annotation_app.py  pyproject.toml  requirements.txt
data/: curated_data_id.jsonl
data/edited/: edited_data_flat.json
notebooks/: oasst2.ipynb
