[tool.ruff]
line-length = 119
select = ["ALL"]
ignore = [
    "D",
    "PLR0913",
    "ANN002",
    "ANN003",
    "ANN101",
]
target-version = "py311"
exclude = ["*.ipynb"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ANN201",
    "N802",
    "ARG",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[project]
requires-python = ">3.9.0"
